Ajustado problema dos loops