@@ -16,87 +16,78 @@ import com.competicaoPiorFilme.domain.repository.FilmeRepository;
 @Service
 public class IntervaloEntrePremiosService {
 
-	private final FilmeRepository filmeRepository;
-	
+    private final FilmeRepository filmeRepository;
+
     public IntervaloEntrePremiosService(FilmeRepository filmeRepository) {
         this.filmeRepository = filmeRepository;
     }
 
     public IntervaloEntrePremiosResponseDTO calcularIntervaloPremios() {
-        List<Filme> filmesPremiados = getFilmesPremiados();        
-        Map<String, List<Integer>> premiosPorProdutor = getPremiosPorProdutos(filmesPremiados);
-        List<IntervaloEntrePremiosDTO> intervalos = new ArrayList<>();
-        
-        for (Map.Entry<String, List<Integer>> entry : premiosPorProdutor.entrySet()) {
-            String produtor = entry.getKey();
-            List<Integer> anos = entry.getValue();
+        List<Filme> filmesPremiados = filmeRepository.findAllByPremiadoTrue();
+        Map<String, List<Integer>> premiosPorProdutor = getPremiosPorProdutor(filmesPremiados);
 
-            if (anos.size() < 2) continue;
-
-            Collections.sort(anos);
-
-            for (int i = 1; i < anos.size(); i++) {
-                int intervalo = anos.get(i) - anos.get(i - 1);
-                intervalos.add(new IntervaloEntrePremiosDTO(
-                        produtor,
-                        intervalo,
-                        anos.get(i - 1),
-                        anos.get(i)
-                ));
-            }
-        }
+        List<IntervaloEntrePremiosDTO> intervalos = calcularIntervalos(premiosPorProdutor);
 
         if (intervalos.isEmpty()) {
             return new IntervaloEntrePremiosResponseDTO(List.of(), List.of());
         }
 
-
-        int menorIntervalo = getMenorIntervalo(intervalos);
-
-        int maiorIntervalo = getMaiorIntervalo(intervalos);
-
-        List<IntervaloEntrePremiosDTO> listarMenorIntervalo = listarIntervalos(intervalos, menorIntervalo);
-
-        List<IntervaloEntrePremiosDTO> listarMaiorIntervalo = listarIntervalos(intervalos, maiorIntervalo);
-
-        return new IntervaloEntrePremiosResponseDTO(listarMenorIntervalo, listarMaiorIntervalo);
+        return extrairMinMax(intervalos);
     }
 
-	private List<IntervaloEntrePremiosDTO> listarIntervalos(List<IntervaloEntrePremiosDTO> intervalos,
-			int minIntervalo) {
-		return intervalos.stream()
-                .filter(i -> i.getInterval() == minIntervalo)
-                .collect(Collectors.toList());
-	}
-
-	private int getMaiorIntervalo(List<IntervaloEntrePremiosDTO> intervalos) {
-		return intervalos.stream()
-                .mapToInt(IntervaloEntrePremiosDTO::getInterval)
-                .max()
-                .orElse(0);
-	}
-
-	private int getMenorIntervalo(List<IntervaloEntrePremiosDTO> intervalos) {
-		return intervalos.stream()
-                .mapToInt(IntervaloEntrePremiosDTO::getInterval)
-                .min()
-                .orElse(0);
-	}
-    
-    public List<Filme> getFilmesPremiados(){
-    	return filmeRepository.findAll().stream()
-        .filter(Filme::isPremiado)
-        .collect(Collectors.toList());
+    private List<IntervaloEntrePremiosDTO> calcularIntervalos(Map<String, List<Integer>> premiosPorProdutor) {
+        List<IntervaloEntrePremiosDTO> intervalos = new ArrayList<>();
+        for (Map.Entry<String, List<Integer>> entry : premiosPorProdutor.entrySet()) {
+            List<Integer> anos = entry.getValue().stream().sorted().toList();
+            for (int i = 1; i < anos.size(); i++) {
+                intervalos.add(new IntervaloEntrePremiosDTO(
+                        entry.getKey(),
+                        anos.get(i) - anos.get(i - 1),
+                        anos.get(i - 1),
+                        anos.get(i)
+                ));
+            }
+        }
+        return intervalos;
     }
-    
-    public Map<String, List<Integer>> getPremiosPorProdutos(List<Filme> filmesPremiados) {
-    	return filmesPremiados.stream()
-        .flatMap(f -> f.getProdutores()
-                .stream()
-                .map(p -> Map.entry(p.getNome(), f.getAno())))
-        .collect(Collectors.groupingBy(
-        		Map.Entry::getKey,
-        		Collectors.mapping(Map.Entry::getValue, Collectors.toList())
-        ));
+
+    private IntervaloEntrePremiosResponseDTO extrairMinMax(List<IntervaloEntrePremiosDTO> intervalos) {
+        int menor = Integer.MAX_VALUE;
+        int maior = Integer.MIN_VALUE;
+        List<IntervaloEntrePremiosDTO> minList = new ArrayList<>();
+        List<IntervaloEntrePremiosDTO> maxList = new ArrayList<>();
+
+        for (IntervaloEntrePremiosDTO dto : intervalos) {
+            int val = dto.getInterval();
+
+            if (val < menor) {
+                menor = val;
+                minList.clear();
+                minList.add(dto);
+            } else if (val == menor) {
+                minList.add(dto);
+            }
+
+            if (val > maior) {
+                maior = val;
+                maxList.clear();
+                maxList.add(dto);
+            } else if (val == maior) {
+                maxList.add(dto);
+            }
+        }
+
+        return new IntervaloEntrePremiosResponseDTO(minList, maxList);
+    }
+
+    private Map<String, List<Integer>> getPremiosPorProdutor(List<Filme> filmesPremiados) {
+        return filmesPremiados.stream()
+                .flatMap(f -> f.getProdutores()
+                        .stream()
+                        .map(p -> Map.entry(p.getNome(), f.getAno())))
+                .collect(Collectors.groupingBy(
+                        Map.Entry::getKey,
+                        Collectors.mapping(Map.Entry::getValue, Collectors.toList())
+                ));
     }
 }
